# emela

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  release-plz.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/rulesets/: dev.json  main.json
.github/workflows/: build-release.yml  ci.yml  nightly.yml  release-plz.yml  release.yml
backends/: README.md
backends/js-bun/: backend.json  runtime.js
backends/js-node/: backend.json  runtime.js
backends/native-aarch64-apple-darwin/: backend.json
backends/native-runtime/: emela_runtime.c
backends/native-x86_64-unknown-linux-gnu/: backend.json
crates/emela/: Cargo.toml
crates/emela-backend-js/: Cargo.toml
crates/emela-backend-js/src/: lib.rs
crates/emela-backend-wasm/: Cargo.toml
crates/emela-backend-wasm-wasip2/: Cargo.toml
crates/emela-backend-wasm-wasip2/src/: lib.rs
crates/emela-backend-wasm/src/: lib.rs
crates/emela-codegen/: Cargo.toml
crates/emela-codegen/src/: backend.rs  error.rs  ir.rs  ir_walk.rs  lib.rs  platform.rs  plugin.rs  rc.rs  registry.rs  tailcall.rs  text.rs  types.rs
crates/emela-wasm/: Cargo.toml
crates/emela-wasm/src/: lib.rs
crates/emela/src/: api.rs  ast.rs  driver.rs  error.rs  fmt.rs  http_host.rs  imports.rs  lexer.rs  lib.rs  lint.rs  lower.rs  main.rs  parser.rs  prelude.rs  resolve.rs  run.rs  socket_host.rs  test_runner.rs  typecheck.rs
crates/emela/src/lsp/: analysis.rs  code_action.rs  completion.rs  mod.rs  protocol.rs  server.rs
crates/emela/src/pome/: capability.rs  manifest.rs  mod.rs
crates/emela/src/std/: clock.emel  core.emel  http.emel  io.emel  socket.emel
crates/emela/tests/: capability_manifest.rs  comparison.rs  effect_di.rs  effect_row_syntax.rs  effect_subsumption.rs  effects.rs  external_plugin.rs  fs.rs  host_interface.rs  http_client.rs  http_server.rs  intrinsic.rs  lint.rs  lsp.rs  minimal_cli.rs  multiline.rs  pipe.rs  platform.rs  pome_cli.rs  rc_reclaim.rs  records.rs  run.rs  socket.rs  stdlib_list.rs  stdlib_util.rs  traits.rs  unit_testing.rs  wasm_examples.rs
docs/: ARCHITECTURE.md  release.md  syntax-highlight.md
editors/: emela.sublime-syntax
editors/nvim/syntax/: emela.vim
examples/: add.emel  effects.emel  error_handling.emel  hello.emel  maximal.emel  pipeline.emel  print_int.emel  result.emel  std-print.emel  string.emel
examples/imports/: main.emel
examples/stdlib/: emela-package.json  main.emel
examples/stdlib/src/: clock.emel  io.emel  list.emel
scripts/: apply-rulesets.sh
src/: ast.rs  codegen.rs  driver.rs  error.rs  external.rs  imports.rs  ir.rs  js.rs  lexer.rs  main.rs  parser.rs  platform.rs  typecheck.rs
src/backend/: bundled.rs  external.rs  js.rs  lowering.rs  mod.rs  native.rs
src/package/: cache.rs  imports.rs  manifest.rs  mod.rs  resolve.rs
tests/: bundled_assets.rs  minimal_cli.rs
