[package]
name = "emela-wasm"
# Browser-playground cdylib: not a distributed artifact and it only depends on
# `emela`. Keep it off crates.io so `cargo package`/release-plz skip it.
publish = false
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "WebAssembly bindings exposing the Emela compiler to the browser playground."

[lib]
name = "emela_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
emela.workspace = true
# Pinned to match the wasm-bindgen CLI available from nixpkgs (`nix run
# nixpkgs#wasm-bindgen-cli`); the crate and CLI versions must match exactly.
wasm-bindgen = "=0.2.121"
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1"
# `emela`'s `run` feature pulls in getrandom 0.2 (for the `random` capability).
# On `wasm32-unknown-unknown` getrandom needs its `js` backend to compile at all
# (it uses `crypto.getRandomValues`); enabling it here turns it on for the whole
# wasm build, since Cargo features are additive.
getrandom = { version = "0.2", features = ["js"] }
